# ChangeLog for dev-java/jcommon
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jcommon/ChangeLog,v 1.25 2008/10/25 17:10:51 nixnut Exp $

  25 Oct 2008; nixnut <nixnut@gentoo.org> jcommon-1.0.13.ebuild:
  Stable on ppc wrt bug 243132

  23 Oct 2008; Markus Meier <maekke@gentoo.org> jcommon-1.0.13.ebuild:
  amd64/x86 stable, bug #243132

*jcommon-1.0.13 (10 Jun 2008)

  10 Jun 2008; Serkan Kaba <serkan@gentoo.org> +jcommon-1.0.13.ebuild:
  Version bump and migration toE API=1 slots. Thanks to Jan Vansteenkiste
  <Jan@buitendezone.be> for reporting.

  10 Jan 2008; Vlastimil Babka <caster@gentoo.org> jcommon-1.0.12.ebuild:
  Restrict junit dependency.

  26 Dec 2007; Petteri Räty <betelgeuse@gentoo.org> -jcommon-0.9.7.ebuild,
  -jcommon-0.9.7-r1.ebuild, -jcommon-0.9.7-r2.ebuild, -jcommon-1.0.5.ebuild,
  -jcommon-1.0.8.ebuild, -jcommon-1.0.9.ebuild:
  Remove old ebuilds.

  26 Dec 2007; Markus Meier <maekke@gentoo.org> jcommon-1.0.12.ebuild:
  x86 stable, bug #201306

  25 Dec 2007; Samuli Suominen <drac@gentoo.org> jcommon-1.0.12.ebuild:
  amd64 stable wrt #201306

  25 Dec 2007; nixnut <nixnut@gentoo.org> jcommon-1.0.12.ebuild:
  Stable on ppc wrt bug 201306

*jcommon-1.0.12 (15 Dec 2007)

  15 Dec 2007; Petteri Räty <betelgeuse@gentoo.org> +jcommon-1.0.12.ebuild:
  Version bump.

*jcommon-1.0.9 (15 Dec 2007)

  15 Dec 2007; Petteri Räty <betelgeuse@gentoo.org> +jcommon-1.0.9.ebuild:
  Version bump. Fixes LICENSE to LGPL-2.1 and RESTRICT tests because they need
  X11.

  13 Dec 2007; Petteri Räty <betelgeuse@gentoo.org> jcommon-1.0.8.ebuild:
  Disable tests as they use X11.

  17 Mar 2007; Petteri Räty <betelgeuse@gentoo.org> jcommon-0.9.7.ebuild,
  jcommon-0.9.7-r1.ebuild, jcommon-0.9.7-r2.ebuild, jcommon-1.0.5.ebuild,
  jcommon-1.0.8.ebuild:
  Change HOMEPAGE from http://www.jfree.org/ to http://www.jfree.org/jcommon/
  and add src_test to 1.0.8.

*jcommon-1.0.8 (10 Feb 2007)
