@@ -1,4 +1,6 @@
 DIST jcommon-1.0.13.tar.gz 1222904 RMD160 dce3c7f657b59fcab5f4908b0948b37afc01b722 SHA1 20d4c3ec45b268e48285ff0216fca3e6edfd3e52 SHA256 c97e7cc66a17602a31008cf406f923c4afbee335797bd21bbb7a0ac800e0e63a
+DIST jcommon-1.0.16.tar.gz 1130148 RMD160 9da97db71f1b6435b55ab5e5d28fac2ba0bf34de SHA1 fd52c22774c291c85046ca83c8c0ba7e88b0caee SHA256 033fd5506d10dcfc7814180b09627e66232fd1ee29b769fc283aa936d7dd607d
 EBUILD jcommon-1.0.13.ebuild 1340 RMD160 3112b85a9917c68a6c4e41a9b5ee43a2f6a45b63 SHA1 ce34bd64b26314aef67ceba85058254095f7a000 SHA256 86e5dc14eeb253f9453763be0b3538f0bf033ad3223b5ab72f2dd1316648480f
-MISC ChangeLog 3823 RMD160 9a051d28128170c67383a68fb226f08746bd78e4 SHA1 c07cf727ea3ed76e6f78114f3e33cf6e5ef9a54c SHA256 374a98bf7c6bbe30055c0c797048bcc06c907c151af5044fa4573d01ce8df7b9
+EBUILD jcommon-1.0.16.ebuild 1311 RMD160 613f08519c21edb677b5d4755d8446cda4236f99 SHA1 8d890c2ee4422dc6a3200463ef01720c934134a7 SHA256 1fea4314d273fdd856938a999cbc5e84d786d19282e20ac096692088b78561e2
+MISC ChangeLog 3942 RMD160 f525e04625537b910aa4368bcd136ba5934d893f SHA1 270e5881c522f763a06faa806ef4a18d96c75c69 SHA256 1fda0d6a0b39b5d1c637e65038d09d6f56834a4ed2bcd13968e246dab0935d3b
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
