@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/jcommon
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jcommon/ChangeLog,v 1.25 2008/10/25 17:10:51 nixnut Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jcommon/ChangeLog,v 1.26 2009/05/11 19:42:32 serkan Exp $
+
+*jcommon-1.0.16 (11 May 2009)
+
+  11 May 2009; Serkan Kaba <serkan@gentoo.org> +jcommon-1.0.16.ebuild:
+  Version bump.
 
   25 Oct 2008; nixnut <nixnut@gentoo.org> jcommon-1.0.13.ebuild:
   Stable on ppc wrt bug 243132
